[package]
name = "pyproject-toml-prettify"
version = "0.1.0"
authors = ["Serge Matveenko <lig@countzero.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml_edit = "0.1.5"
structopt = "0.3.15"
colored-diff = "0.2.2"
